--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@vercel/analytics": "^1.3.1",
     "astro": "^4.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
